{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 53,
  "lineage": "32ea5573-c7e7-7437-be44-3f09ec6296ef",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/zones/asia-northeast3-a/instanceGroups/instance-group-manager",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-02-03T00:43:36.359-08:00",
            "enable_cdn": false,
            "fingerprint": "x85KL0E6DYg=",
            "generated_id": 5335315881300948951,
            "health_checks": [
              "projects/iaas-demo-208601/global/healthChecks/health-check"
            ],
            "id": "projects/iaas-demo-208601/global/backendServices/backend",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "backend",
            "port_name": "http",
            "project": "iaas-demo-208601",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/backendServices/backend",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.instance_group_manager",
            "google_compute_instance_template.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork",
            "google_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "healthcheck",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-03T00:42:30.886-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iaas-demo-208601/global/firewalls/healthcheck-firewall",
            "log_config": [],
            "name": "healthcheck-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/networks/vpc-1",
            "priority": 1000,
            "project": "iaas-demo-208601",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/firewalls/healthcheck-firewall",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-03T00:42:30.907-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iaas-demo-208601/global/firewalls/internal-firewall",
            "log_config": [],
            "name": "internal-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/networks/vpc-1",
            "priority": 1000,
            "project": "iaas-demo-208601",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/firewalls/internal-firewall",
            "source_ranges": [
              "10.0.0.0/8"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-iap",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-03T00:42:30.924-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/iaas-demo-208601/global/firewalls/ssh-firewall",
            "log_config": [],
            "name": "ssh-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/networks/vpc-1",
            "priority": 1000,
            "project": "iaas-demo-208601",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/firewalls/ssh-firewall",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/iaas-demo-208601/global/forwardingRules/global-rule",
            "ip_address": "34.120.66.101",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL_MANAGED",
            "name": "global-rule",
            "port_range": "80",
            "project": "iaas-demo-208601",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/forwardingRules/global-rule",
            "target": "projects/iaas-demo-208601/global/targetHttpProxies/target-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.instance_group_manager",
            "google_compute_instance_template.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork",
            "google_compute_target_http_proxy.default",
            "google_compute_url_map.default",
            "google_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/iaas-demo-208601/global/networks/vpc-1",
            "mtu": 1460,
            "name": "vpc-1",
            "project": "iaas-demo-208601",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/networks/vpc-1"
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-02-03T00:42:56.199-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/iaas-demo-208601/regions/asia-northeast3/routers/my-router",
            "name": "my-router",
            "network": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/networks/vpc-1",
            "project": "iaas-demo-208601",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/regions/asia-northeast3/routers/my-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "iaas-demo-208601/asia-northeast3/my-router/my-router-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "iaas-demo-208601",
            "region": "asia-northeast3",
            "router": "my-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.router",
            "google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-03T00:42:31.512-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/iaas-demo-208601/regions/asia-northeast3/subnetworks/subnet-1",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/networks/vpc-1",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "iaas-demo-208601",
            "purpose": "PRIVATE",
            "region": "asia-northeast3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/regions/asia-northeast3/subnetworks/subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-03T00:44:22.769-08:00",
            "description": "a description",
            "id": "projects/iaas-demo-208601/global/targetHttpProxies/target-proxy",
            "name": "target-proxy",
            "project": "iaas-demo-208601",
            "proxy_bind": false,
            "proxy_id": 9011120571650504585,
            "self_link": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/targetHttpProxies/target-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/urlMaps/url-map-target-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.instance_group_manager",
            "google_compute_instance_template.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork",
            "google_compute_url_map.default",
            "google_service_account.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-03T00:44:10.756-08:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/backendServices/backend",
            "default_url_redirect": [],
            "description": "a description",
            "fingerprint": "9_0NhjGs-KY=",
            "header_action": [],
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "mysite.com"
                ],
                "path_matcher": "allpaths"
              }
            ],
            "id": "projects/iaas-demo-208601/global/urlMaps/url-map-target-proxy",
            "map_id": 224355582754256821,
            "name": "url-map-target-proxy",
            "path_matcher": [
              {
                "default_route_action": [],
                "default_service": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/backendServices/backend",
                "default_url_redirect": [],
                "description": "",
                "header_action": [],
                "name": "allpaths",
                "path_rule": [
                  {
                    "paths": [
                      "/*"
                    ],
                    "route_action": [],
                    "service": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/backendServices/backend",
                    "url_redirect": []
                  }
                ],
                "route_rules": []
              }
            ],
            "project": "iaas-demo-208601",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iaas-demo-208601/global/urlMaps/url-map-target-proxy",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.instance_group_manager",
            "google_compute_instance_template.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork",
            "google_service_account.default"
          ]
        }
      ]
    }
  ]
}